--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.15.1",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^4.1.1",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "socket.io": "^4.8.1",
