--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,9 +25,11 @@
     "mongoose": "^8.15.1",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cache": "^5.1.2",
     "node-cron": "^4.1.1",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
+    "otp-generator": "^4.0.1",
     "socket.io": "^4.8.1",
     "validator": "^13.15.15"
   }
